# apps/api/internal/storage/db.go
@@ -31,21 +31,23 @@ const (
 )
 
 const (
-	TableVendors        = "vendors"
-	TableTransactions   = "transactions"
-	TableImports        = "imports"
-	TableListings       = "listings"
-	TableEOD            = "eods"
-	TableEODUploads     = "eod_uploads"
-	TableProviders      = "providers"
-	TableAccounts       = "accounts"
-	TablePositions      = "positions"
-	TablePosSnapshots   = "position_snapshots"
-	TablePortSnapshots  = "portfolio_snapshots"
-	TableAssetClasses   = "classes"
-	TableAssetItems     = "items"
-	TableAssetMutations = "mutations"
-	TableAssetSnapshot  = "snapshots"
+	TableVendors         = "vendors"
+	TableTransactions    = "transactions"
+	TableImports         = "imports"
+	TableListings        = "listings"
+	TableEOD             = "eods"
+	TableEODUploads      = "eod_uploads"
+	TableProviders       = "providers"
+	TableProviderListing = "provider_listings"
+	TableCatalogueSyncs  = "catalogue_syncs"
+	TableAccounts        = "accounts"
+	TablePositions       = "positions"
+	TablePosSnapshots    = "position_snapshots"
+	TablePortSnapshots   = "portfolio_snapshots"
+	TableAssetClasses    = "classes"
+	TableAssetItems      = "items"
+	TableAssetMutations  = "mutations"
+	TableAssetSnapshot   = "snapshots"
 )
 
 type DB struct {
